recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:13: error: not found: value retourne
    retourne(length, angle);
    ^Tree:16: error: not found: value retourne
    retourne(length,angle);
    ^